// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionItem matches snapshot (credit transaction) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 14,
      "opacity": 1,
      "paddingVertical": 13,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 214, 50, 0.12)",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Ionicons
      color="#00D632"
      name="arrow-down-circle"
      size={20}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Outfit-SemiBold",
          "fontSize": 14,
        }
      }
    >
      Whole Foods
    </Text>
    <Text
      style={
        {
          "color": "#636366",
          "fontSize": 12,
          "marginTop": 2,
        }
      }
    >
      Groceries
       · 
      Mar 15
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#00D632",
        "fontFamily": "Outfit-Bold",
        "fontSize": 15,
        "letterSpacing": -0.3,
      }
    }
  >
    +
    $2,000.00
  </Text>
</View>
`;

exports[`TransactionItem matches snapshot (debit transaction) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 14,
      "opacity": 1,
      "paddingVertical": 13,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2C2C2E",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Ionicons
      color="#AFAFB8"
      name="card-outline"
      size={20}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Outfit-SemiBold",
          "fontSize": 14,
        }
      }
    >
      Whole Foods
    </Text>
    <Text
      style={
        {
          "color": "#636366",
          "fontSize": 12,
          "marginTop": 2,
        }
      }
    >
      Groceries
       · 
      Mar 15
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Outfit-Bold",
        "fontSize": 15,
        "letterSpacing": -0.3,
      }
    }
  >
    -
    $87.34
  </Text>
</View>
`;

exports[`TransactionItem matches snapshot (pending transaction) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 14,
      "opacity": 1,
      "paddingVertical": 13,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2C2C2E",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Ionicons
      color="#AFAFB8"
      name="card-outline"
      size={20}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Outfit-SemiBold",
          "fontSize": 14,
        }
      }
    >
      Whole Foods
    </Text>
    <Text
      style={
        {
          "color": "#636366",
          "fontSize": 12,
          "marginTop": 2,
        }
      }
    >
      Groceries
       · 
      Mar 15
       · Pending
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Outfit-Bold",
        "fontSize": 15,
        "letterSpacing": -0.3,
      }
    }
  >
    -
    $87.34
  </Text>
</View>
`;

exports[`TransactionItem matches snapshot (uncategorized transaction) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 14,
      "opacity": 1,
      "paddingVertical": 13,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2C2C2E",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Ionicons
      color="#AFAFB8"
      name="card-outline"
      size={20}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Outfit-SemiBold",
          "fontSize": 14,
        }
      }
    >
      Whole Foods
    </Text>
    <Text
      style={
        {
          "color": "#636366",
          "fontSize": 12,
          "marginTop": 2,
        }
      }
    >
      Uncategorized
       · 
      Mar 15
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Outfit-Bold",
        "fontSize": 15,
        "letterSpacing": -0.3,
      }
    }
  >
    -
    $87.34
  </Text>
</View>
`;
